--- a/backend/eshop/src/main/resources/application.properties
+++ b/backend/eshop/src/main/resources/application.properties
@@ -24,13 +24,12 @@ spring.jta.enabled=false
 # Spring Session
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
-server.servlet.session.cookie.same-site=none
+
+server.servlet.session.cookie.same-site=Lax
 server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.path=/
 server.servlet.session.cookie.name=SESSION
-server.servlet.session.timeout=86400s
-
 spring.session.timeout=1d
 
 # Security Logging
