Restructure the code

--- a/backend/eshop/src/main/resources/application.properties
+++ b/backend/eshop/src/main/resources/application.properties
@@ -47,8 +47,7 @@ logging.level.com.example.eshop.exception=DEBUG
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 
-## Validation
-#spring.mvc.throw-exception-if-no-handler-found=true
-#spring.web.resources.add-mappings=false
-#spring.jackson.deserialization.fail-on-unknown-properties=true
-#spring.jackson.deserialization.fail-on-missing-creator-properties=true
+# Paypal Configuration
+paypal.client.id=${PAYPAL_CLIENT_ID}
+paypal.client.secret=${PAYPAL_CLIENT_SECRET}
+paypal.mode=${PAYPAL_MODE}
