--- a/backend/eshop/.env.example
+++ b/backend/eshop/.env.example
@@ -8,17 +8,10 @@ DB_NAME=
 DB_PORT=
 DB_DRIVER=
 
-# Elasticsearch configuration
-ELASTICSEARCH_VERSION=
-ELASTICSEARCH_URL=
-ELASTICSEARCH_USER=
-ELASTICSEARCH_PASSWORD=
-ELASTICSEARCH_HOST=
-ELASTICSEARCH_PORT=
-ELASTICSEARCH_SCHEME=
+# React configuration
+REACT_APP_API_URL=
 
-# Redis configuration
-REDIS_VERSION=
-REDIS_URL=
-REDIS_HOST=
-REDIS_PORT=
+# Paypal sandbox configuration
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+PAYPAL_MODE=sandbox
