Adding paypal payment

--- a/backend/eshop/.env.example
+++ b/backend/eshop/.env.example
@@ -12,6 +12,10 @@ DB_DRIVER=
 REACT_APP_API_URL=
 
 # Paypal sandbox configuration
+PAYPAL_BRAND_NAME=e-shop
 PAYPAL_CLIENT_ID=
 PAYPAL_CLIENT_SECRET=
 PAYPAL_MODE=sandbox
+PAYPAL_CURRENCY=USD
+PAYPAL_RETURN_URL=http://localhost:8080/api/orders/paypal/success
+PAYPAL_CANCEL_URL=http://localhost:8080/api/orders/paypal/cancel
