--- a/backend/eshop/src/main/resources/application.properties
+++ b/backend/eshop/src/main/resources/application.properties
@@ -50,4 +50,5 @@ spring.messages.encoding=UTF-8
 # Paypal Configuration
 paypal.client.id=${PAYPAL_CLIENT_ID}
 paypal.client.secret=${PAYPAL_CLIENT_SECRET}
+paypal.base-url=https://api-m.sandbox.paypal.com
 paypal.mode=${PAYPAL_MODE}
