--- a/backend/eshop/pom.xml
+++ b/backend/eshop/pom.xml
@@ -101,11 +101,15 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
-		<dependency>
+		</dependency>		<dependency>
 			<groupId>com.paypal.sdk</groupId>
 			<artifactId>paypal-server-sdk</artifactId>
 			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 	</dependencies>
 
