--- a/backend/eshop/src/main/resources/application.properties
+++ b/backend/eshop/src/main/resources/application.properties
@@ -6,15 +6,15 @@ spring.docker.compose.enabled=false
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=${DB_URL}
-spring.datasource.driverClassName=${DB_DRIVER}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/eshop_db
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=FujiCaWa01062004
 
 # JPA/Hibernate properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=${DB_DIALECT}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
 
@@ -25,7 +25,7 @@ spring.jta.enabled=false
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 
-server.servlet.session.cookie.same-site=Lax
+server.servlet.session.cookie.same-site=LAX
 server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.path=/
