--- a/backend/eshop/src/main/resources/application.properties
+++ b/backend/eshop/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=eshop
 spring.config.import=optional:file:.env[.properties]
 
 spring.docker.compose.enabled=false
-server.port=8080
+server.port=${SERVER_PORT:8080}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/eshop_db
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=FujiCaWa01062004
+spring.datasource.url=${DB_URL}
+spring.datasource.driverClassName=${DB_DRIVER}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA/Hibernate properties
 spring.jpa.show-sql=true
@@ -50,5 +50,5 @@ spring.messages.encoding=UTF-8
 # Paypal Configuration
 paypal.client.id=${PAYPAL_CLIENT_ID}
 paypal.client.secret=${PAYPAL_CLIENT_SECRET}
-paypal.base-url=https://api-m.sandbox.paypal.com
+paypal.base-url=${PAYPAL_BASE_URL:https://api-m.sandbox.paypal.com}
 paypal.mode=${PAYPAL_MODE}
