Adding ImageUploadService, ProductRequest and fixing some errors with swagger's compatibility

--- a/backend/eshop/src/main/resources/application.properties
+++ b/backend/eshop/src/main/resources/application.properties
@@ -47,8 +47,8 @@ logging.level.com.example.eshop.exception=DEBUG
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 
-# Paypal Configuration
-paypal.client.id=${PAYPAL_CLIENT_ID}
-paypal.client.secret=${PAYPAL_CLIENT_SECRET}
-paypal.base-url=${PAYPAL_BASE_URL:https://api-m.sandbox.paypal.com}
-paypal.mode=${PAYPAL_MODE}
+# PayPal Configuration
+#paypal.client.id=${PAYPAL_CLIENT_ID}
+#paypal.client.secret=${PAYPAL_CLIENT_SECRET}
+#paypal.base-url=${PAYPAL_BASE_URL:https://api-m.sandbox.paypal.com}
+#paypal.mode=${PAYPAL_MODE}
