--- a/backend/eshop/pom.xml
+++ b/backend/eshop/pom.xml
@@ -101,7 +101,8 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>		<dependency>
+		</dependency>
+		<dependency>
 			<groupId>com.paypal.sdk</groupId>
 			<artifactId>paypal-server-sdk</artifactId>
 			<version>1.0.0</version>
@@ -109,7 +110,17 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.2.0</version>
+			<version>2.8.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http5</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-taglib</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 
