--- a/frontend/PureCommerce/.gitignore
+++ b/frontend/PureCommerce/.gitignore
@@ -1,5 +1,13 @@
+# Dependency folders
+node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+.cache/
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,15 +15,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Local environments
 *.local
+.env
+.env.*
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Editor files
+.vscode/
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
