Adding cart UI logic, search UI logic, fixing UI component, fixing backend search products logic, and implement checkout UI logic.

--- a/backend/eshop/src/main/resources/application.properties
+++ b/backend/eshop/src/main/resources/application.properties
@@ -47,8 +47,5 @@ logging.level.com.example.eshop.exception=DEBUG
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 
-# PayPal Configuration
-#paypal.client.id=${PAYPAL_CLIENT_ID}
-#paypal.client.secret=${PAYPAL_CLIENT_SECRET}
-#paypal.base-url=${PAYPAL_BASE_URL:https://api-m.sandbox.paypal.com}
-#paypal.mode=${PAYPAL_MODE}
+# Frontend url
+app.frontend.url=${REACT_APP_URL}
