--- a/compose.yaml
+++ b/compose.yaml
@@ -49,5 +49,7 @@ services:
     command: sh -c "npm install && npm run dev"
     environment:
       - TZ=Asia/Ho_Chi_Minh
+    env_file:
+    - ./frontend/eshop/.env.docker
     ports:
       - "3000:3000"
